# hnfm-egui-test

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  download_fonts.py
devlog/: ListItem 组件实现.toml  NavigationRail 对齐 Compose M3 标准.toml  color generate_theme 重构.toml  list-item开发.toml  二级 List 响应式改进.toml  字体下载脚本.toml
src/: app.rs  lib.rs  main.rs  sidebar.rs
src/fonts/: mod.rs
src/material/: color.rs  icon_button.rs  list_item.rs  mod.rs  nav_rail_item.rs  ripple.rs  util.rs
